# Pharma123

./: .gitignore  .replit  ADD_NAVIGATION_TO_DASHBOARDS.py  DATABASE_SETUP.md  DISTRIBUTOR_BATCH_FIX.md  Esp32_VinJyo.ino  FIX_UNKNOWN_LOCATION.md  GOOGLE_MAPS_SETUP.md  LOCATION_FIX_FINAL.md  LOCATION_FIX_SUMMARY.md  NAVIGATION_COMPLETE.md  NAVIGATION_SUMMARY.md  OBJECTIVES_STATUS.md  PHARMACY_BATCH_FIX.md  PRODUCT_NAVIGATION_FINAL.md  PRODUCT_NAVIGATION_SETUP.md  QUICK_FIX_STEPS.md  QUICK_START.md  README.md  REALTIME_ENHANCEMENTS.md  REALTIME_FEATURES.md  REFRESH_OPTIMIZATION.md  SECURITY.md  START_REALTIME_DASHBOARD.md  TIMESTAMP_FIX.md  WORKFLOW_GUIDE.md  admin_confirm_users.py  app.py  check_batches.py  check_latest_data.py  cleanup_old_batch.py  confirm_users.py  install_navigation.py  pyproject.toml  realtime_iot_dashboard.py  replit.md  requirements.txt  run_realtime_dashboard.bat  test_audit_logging.py  test_batches_table.py  (+4 more)
attached_assets/: Pasted-Create-a-full-stack-AI-powered-IoT-Blockchain-Pharmaceutical-Supply-Chain-System-called-PharmaCha-1762364572278_1762364572279.txt
backend/: main.py  supabase_config.py
components/: blockchain_viewer.py  product_navigation.py
simulator/: send_data.py
